Update location address in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="section">
         <h3>Ubicación</h3>
         <p>
-          Centro de Despacho Central Distrito 2150, Buenos Aires.
+          Centro de Despacho BIDCOM,Estomba 522 Buenos Aires.
         </p>
       </div>
 
