--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         ⏳ Esperando confirmación de llegada...
       </div>
 
-      <!-- ✅ CONTENEDOR QR (NO SE BORRA, SE USA DESDE driver.js) -->
+      <!-- ✅ CONTENEDOR QR -->
       <div id="qr-container" style="margin-top:20px;text-align:center;"></div>
 
       <div class="divider"></div>
@@ -55,55 +55,70 @@
 
     <h2 class="panel-title">Panel del día</h2>
 
-    <!-- RESUMEN -->
-    <div class="panel-resumen">
-      <div class="resumen-item">
-        <span class="resumen-label">Choferes activos</span>
-        <span id="total-activos" class="resumen-value">0</span>
+    <!-- 🔥 LAYOUT PRINCIPAL (NUEVO, SOLO VISUAL) -->
+    <div class="panel-layout">
+
+      <!-- IZQUIERDA: LISTAS -->
+      <div class="panel-main">
+
+        <!-- ZONA QR -->
+        <div id="qr-despacho" style="margin:20px 0; display:none;">
+          <h3>📷 Escanear QR para despachar</h3>
+          <div id="qr-reader" style="max-width:320px"></div>
+          <p id="qr-resultado" style="font-weight:bold;margin-top:10px;"></p>
+        </div>
+
+        <!-- LISTAS -->
+        <div class="panel-tablas">
+
+          <!-- PENDIENTES -->
+          <div class="panel-col">
+            <h3>🟡 Pendientes</h3>
+            <ul id="lista-pendientes" class="lista"></ul>
+          </div>
+
+          <!-- DESPACHADOS -->
+          <div class="panel-col">
+            <h3>🟢 Despachados</h3>
+            <ul id="lista-despachados" class="lista"></ul>
+          </div>
+
+        </div>
       </div>
 
-      <div class="resumen-item">
-        <span class="resumen-label">Pendientes</span>
-        <span id="total-pendientes" class="resumen-value">0</span>
-      </div>
+      <!-- DERECHA: RESUMEN -->
+      <aside class="panel-side">
+        <div class="panel-resumen">
 
-      <div class="resumen-item">
-        <span class="resumen-label">Despachados</span>
-        <span id="total-despachados" class="resumen-value">0</span>
-      </div>
+          <div class="resumen-item">
+            <span class="resumen-label">Choferes activos</span>
+            <span id="total-activos" class="resumen-value">0</span>
+          </div>
+
+          <div class="resumen-item">
+            <span class="resumen-label">Pendientes</span>
+            <span id="total-pendientes" class="resumen-value">0</span>
+          </div>
+
+          <div class="resumen-item">
+            <span class="resumen-label">Despachados</span>
+            <span id="total-despachados" class="resumen-value">0</span>
+          </div>
+
+        </div>
+      </aside>
+
     </div>
 
-    <!-- ================= ZONA QR (DESPACHO) ================= -->
-    <div id="qr-despacho" style="margin:20px 0; display:none;">
-      <h3>📷 Escanear QR para despachar</h3>
-      <div id="qr-reader" style="max-width:320px"></div>
-      <p id="qr-resultado" style="font-weight:bold;margin-top:10px;"></p>
-    </div>
-
-    <!-- LISTAS -->
-    <div class="panel-tablas">
-
-      <!-- PENDIENTES -->
-      <div class="panel-col">
-        <h3>🟡 Pendientes</h3>
-        <ul id="lista-pendientes" class="lista"></ul>
-      </div>
-
-      <!-- DESPACHADOS -->
-      <div class="panel-col">
-        <h3>🟢 Despachados</h3>
-        <ul id="lista-despachados" class="lista"></ul>
-      </div>
-
+    <!-- FIRMA -->
+    <div class="panel-signature">
+      Desarrollado por <strong>JUCA®</strong>
     </div>
 
   </section>
 
   <!-- ================= SCRIPTS ================= -->
-  <!-- DRIVER: identidad + fichaje + QR -->
   <script type="module" src="assets/js/driver.js"></script>
-
-  <!-- PANEL: lectura Firestore + estados -->
   <script type="module" src="assets/js/panel.js"></script>
 
 </body>
