Add driver selection dropdown to index.html
Added a driver selection dropdown to the registration form.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Despachos - Registro</title>
 
   <!-- FAVICON -->
-<link rel="icon" type="image/jpeg" href="img/logo.jpeg">
-
+  <link rel="icon" type="image/jpeg" href="img/logo.jpeg">
 
   <!-- ESTILOS -->
   <link rel="stylesheet" href="assets/css/main.css">
@@ -34,6 +33,19 @@
       <p class="subtitle">
         Tocá el botón para registrar tu llegada al centro de despacho.
       </p>
+
+      <!-- ✅ NUEVO: SELECTOR DE CHOFER -->
+      <div style="text-align:left;margin:14px 0 18px;">
+        <label for="driverSelect" style="font-weight:700;color:#0f172a;display:block;margin-bottom:6px;">
+          Seleccioná tu nombre
+        </label>
+
+        <select id="driverSelect" style="width:100%;padding:12px;border-radius:12px;border:1px solid #e5e7eb;">
+          <option value="">Cargando...</option>
+        </select>
+
+        <p id="turnoInfo" style="margin:10px 0 0;font-size:13px;color:#475569;"></p>
+      </div>
 
       <button id="btnFichar" class="primary-btn">
         Registrar llegada
