--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
       <!-- ✅ CONTENEDOR QR -->
       <div id="qr-container" style="margin-top:20px;text-align:center;"></div>
 
+      <!-- ✅ NUEVO: LISTADO REGISTRADOS HOY -->
+      <div id="hoy-box" style="margin-top:18px;text-align:left;">
+        <h3 style="margin:0 0 10px;color:#0f172a;">📋 Registrados hoy</h3>
+        <ul id="lista-hoy" style="list-style:none;padding:0;margin:0;display:flex;flex-direction:column;gap:10px;"></ul>
+        <p style="margin:10px 0 0;font-size:12px;color:#64748b;">
+          Ordenado por hora de llegada.
+        </p>
+      </div>
+
       <div class="divider"></div>
 
       <div class="section">
