--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Turnero De Ultima Milla</title>
 
+  <!-- ✅ PWA: MANIFEST + COLOR (NUEVO) -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#3933EB">
+
+  <!-- ✅ PWA (iOS): ICONO + MODO APP (NUEVO) -->
+  <link rel="apple-touch-icon" href="/img/logo.jpeg">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <!-- FAVICON -->
   <link rel="icon" type="image/jpeg" href="img/logo.jpeg">
 
@@ -282,6 +290,23 @@
   <!-- ================= SCRIPTS ================= -->
   <script type="module" src="assets/js/driver.js"></script>
   <script type="module" src="assets/js/panel.js"></script>
+
+  <!-- ✅ PWA: REGISTRO SERVICE WORKER (NUEVO) -->
+  <script>
+    (function () {
+      if (!("serviceWorker" in navigator)) return;
+
+      window.addEventListener("load", function () {
+        navigator.serviceWorker.register("/service-worker.js")
+          .then(function () {
+            // ok
+          })
+          .catch(function (err) {
+            console.warn("Service Worker no se pudo registrar:", err);
+          });
+      });
+    })();
+  </script>
 
 </body>
 </html>
